hashgenerator/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hashgenerator-dep
  namespace: hashgenerator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hashgenerator
  template:
    metadata:
      labels:
        app: hashgenerator
    spec:
      containers:
        - name: hashgenerator-server
          image: anntey/hashgenerator-server:latest
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
        - name: hashgenerator
          image: anntey/hashgenerator-generator:latest
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
