hashgenerator/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hashgenerator-svc
  namespace: hashgenerator
spec:
  type: ClusterIP
  selector:
    app: hashgenerator
  ports:
    - name: server
      port: 3001
      protocol: TCP
      targetPort: 3001
    - name: generator
      port: 3002
      protocol: TCP
      targetPort: 3002
