hashgenerator/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hashgenerator-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: hashgenerator-svc
              servicePort: 1234
